[gd_scene load_steps=10 format=3 uid="uid://23vpthkdxvxk"]

[ext_resource type="Script" uid="uid://4flf2v47sqet" path="res://scripts/towers/fort.gd" id="1_qwvox"]
[ext_resource type="PackedScene" uid="uid://dhcbg2jscx5iy" path="res://scenes/bullets/bullet_1.tscn" id="2_7gee1"]
[ext_resource type="Texture2D" uid="uid://canivpyowvvak" path="res://assets/tower/BombPipe.png" id="3_7gee1"]
[ext_resource type="Texture2D" uid="uid://bf3wmagq6lvk2" path="res://assets/tower/BombPipeFire.png" id="4_58x5s"]
[ext_resource type="Texture2D" uid="uid://cks5e08ne5gyr" path="res://assets/tower/BombPipeFront.png" id="5_5qvc3"]
[ext_resource type="Texture2D" uid="uid://bc26q33pxh361" path="res://assets/tower/BombPipeBack.png" id="6_pldll"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7gee1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7gee1")
}, {
"duration": 1.0,
"texture": ExtResource("4_58x5s")
}, {
"duration": 1.0,
"texture": ExtResource("3_7gee1")
}],
"loop": false,
"name": &"LeftRight",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_5qvc3")
}, {
"duration": 1.0,
"texture": ExtResource("5_5qvc3")
}],
"loop": false,
"name": &"Lower",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_pldll")
}, {
"duration": 1.0,
"texture": ExtResource("6_pldll")
}],
"loop": false,
"name": &"Upper",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktxwe"]
size = Vector2(53, 52)

[sub_resource type="CircleShape2D" id="CircleShape2D_ktxwe"]
radius = 734.063

[node name="Fort_1" type="Area2D"]
scale = Vector2(0.781, 0.781)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_qwvox")
type = 4
building_cost = 400
auto_aim = false
bullet_scene = ExtResource("2_7gee1")
reload_seconds = 3.0
damage = 30

[node name="Tower" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Tower"]
position = Vector2(0, -7.68246)
sprite_frames = SubResource("SpriteFrames_7gee1")
animation = &"Lower"

[node name="LeftRightMarker" type="Marker2D" parent="Tower"]
position = Vector2(38.4123, -15.3649)

[node name="LowerMarker" type="Marker2D" parent="Tower"]
position = Vector2(0, 3.84123)

[node name="UpperMarker" type="Marker2D" parent="Tower"]
position = Vector2(0, -44.8143)

[node name="Body" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_ktxwe")

[node name="AimRange" type="Area2D" parent="."]
visible = false
light_mask = 0
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AimRange"]
shape = SubResource("CircleShape2D_ktxwe")

[connection signal="area_entered" from="AimRange" to="." method="_on_aim_range_area_entered"]
[connection signal="area_exited" from="AimRange" to="." method="_on_aim_range_area_exited"]
